# yingcun-douyin-downloader

./: .gitignore  README.md  RELEASE.md  USER_GUIDE.md  Yingcun.spec  gui.py  main.py  pyproject.toml  requirements-release.txt  requirements.txt  web_app.py
.github/workflows/: release.yml  tests.yml
assets/: Yingcun.icns
downloader/: __init__.py  download.py  parser.py  quality.py  utils.py
scripts/: create_icons.py
tests/: test_download.py  test_gui.py  test_parser.py  test_quality.py  test_web.py
web/: app.js  index.html  styles.css
